--- a/css/beymoji.css
+++ b/css/beymoji.css
@@ -74,7 +74,7 @@ padding-left: 5em;
 padding-right: 5em;
 justify-content: space-between}
 
-.app {margin:0 auto;
+.bey {display: block;
 height:340px;
 padding-left: 7em;
 padding-right: 7em;
